Trying to fix rounded input border on iOS

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,3 +35,8 @@ picture {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+input[type="text"] {
+  -webkit-appearance: none !important;
+  border-radius: 4px !important;
+}
